samples/_failures_safe/1761593833_5e410e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d37da767.c:132:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  132 | int matrix_trans
      | ^~~
